@@ -112,6 +112,7 @@ namespace Mono.Unix {
 			return passwd.ToString ();
 		}
 
+		[Obsolete ("The return type of this method will change in the next release")]
 		public Passwd ToPasswd ()
 		{
 			return passwd;
